#223 fixing toasts z-index to show on top of everything

--- a/src/_webapp/ressources/css/karaokemugen.css
+++ b/src/_webapp/ressources/css/karaokemugen.css
@@ -642,7 +642,7 @@ bdgc {
 	left: 50%;
     transform: translateX(-50%);
     position: fixed;
-	z-index: 10070;
+	z-index: 1000000070;
 	max-width:600px;
 	min-width:250px;
 }
@@ -653,7 +653,7 @@ bdgc {
 	padding: 10px;
 	margin: 7px;
     box-shadow: 2px 2px 1px #a5a5a5;
-	z-index: 10070;
+	z-index: 1000000070;
 	opacity: 0;
 	transition: opacity ease .5s;
 }
